Added a middle step in the wizard.  Added support for launch arguments via the projectname.csproj.user file for each mobile platform.

--- a/contenfulsyncapi/MainPage.xaml
+++ b/contenfulsyncapi/MainPage.xaml
@@ -6,40 +6,13 @@
              Title="Contentful Sync API">
 
     <StackLayout Orientation="Vertical" Padding="10, 10, 10, 10">
-        <StackLayout Orientation="Vertical">
-            <Label Text="Space ID"/>
-            <Entry x:Name="entry_space" Text="{Binding Space}"/>
-        </StackLayout>
-        <StackLayout Orientation="Vertical">
-            <Label Text="Access Token"/>
-            <Entry x:Name="entry_accessToken" Text="{Binding AccessToken}"/>
-        </StackLayout>
-        <StackLayout Orientation="Vertical">
-            <Label Text="Environment"/>
-            <Entry x:Name="entry_environment" Text="{Binding Environment}"/>
-        </StackLayout>
-        <StackLayout Orientation="Vertical" IsVisible="{Binding IsSpaceSelected}">
-            <Label Text="Type"/>
-            <Picker x:Name="picker_type" Title="Select a Type">
-                <Picker.Items>
-                    <x:String>All</x:String>
-                    <x:String>Asset</x:String>
-                    <x:String>Entry</x:String>
-                    <x:String>Deletion</x:String>
-                    <x:String>DeletedAsset</x:String>
-                    <x:String>DeletedEntry</x:String>
-                </Picker.Items>
-            </Picker>
-        </StackLayout>
-        <StackLayout Orientation="Vertical" IsVisible="{Binding IsSpaceSelected}">
-            <Label Text="Content Type"/>
-            <Picker x:Name="picker_contentType" Title="Select a Content Type" ItemsSource="{Binding ContentTypes}"/>
-        </StackLayout>
-        <StackLayout Orientation="Vertical" IsVisible="{Binding IsSpaceSelected}">
-            <Label Text="Recursive"/>
-            <Switch x:Name="switch_Recursive" IsToggled="{Binding Recursive}" HorizontalOptions="Start"/>
-        </StackLayout>
-        <Button x:Name="btn_Request" Clicked="btn_Request_Clicked" Text="{Binding RequestButtonText}"/>
+        <Label Text="Space ID"/>
+        <Entry x:Name="entry_space" Text="{Binding SpaceId}"/>
+        <Label Text="Access Token"/>
+        <Entry x:Name="entry_accessToken" Text="{Binding AccessToken}"/>
+        <Label Text="Environment"/>
+        <Entry x:Name="entry_environment" Text="{Binding Environment}"/>
+        <Button x:Name="btn_InitializeService" Clicked="btn_InitializeService_Clicked" Text="Initialize Client"/>
     </StackLayout>
 
 </ContentPage>
