--- a/contenfulsyncapi/SelectFiltersPage.xaml
+++ b/contenfulsyncapi/SelectFiltersPage.xaml
@@ -11,9 +11,9 @@
         <StackLayout Orientation="Vertical" Padding="10, 10, 10, 10">
             <StackLayout Orientation="Vertical">
                 <Label Text="Sync Type"/>
-                <controls:EnumBindablePicker x:Name="picker_syncType" x:TypeArguments="enums:SyncType" Title="(optional)" SelectedIndex="{Binding SelectedSyncTypeIndex}"/>
+                <controls:EnumBindablePicker x:Name="picker_syncType" x:TypeArguments="enums:SyncType" Title="Sync Type" SelectedIndex="{Binding SelectedSyncTypeIndex}"/>
                 <Label Text="Content Type"/>
-                <Picker x:Name="picker_contentType" Title="(optional)" ItemsSource="{Binding ContentTypes}" ItemDisplayBinding="{Binding Name}" SelectedItem="{Binding SelectedContentType}"/>
+                <Picker x:Name="picker_contentType" Title="Content Type" ItemsSource="{Binding ContentTypes}" ItemDisplayBinding="{Binding Name}" SelectedItem="{Binding SelectedContentType}"/>
                 <Label Text="Recursive"/>
                 <Switch x:Name="switch_Recursive" IsToggled="{Binding Recursive}" HorizontalOptions="Start"/>
             </StackLayout>
