--- a/contenfulsyncapi/SelectFiltersPage.xaml
+++ b/contenfulsyncapi/SelectFiltersPage.xaml
@@ -2,46 +2,33 @@
 <ContentPage
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:contenfulsyncapi.ViewModel"
     x:Class="contenfulsyncapi.SelectFiltersPage"
     NavigationPage.HasNavigationBar="True"
-    Title="Content Type Selection">
-    <ContentPage.Resources>
-        <ResourceDictionary>
-            <DataTemplate x:Key="selectedAppearanceTemplate">
-                <ViewCell>
-                    <StackLayout Orientation="Horizontal" Padding="0" Spacing="20">
-                        <Switch IsToggled="{Binding IsSelected}"/>
-                        <Label Text="√" TextColor="Black" FontAttributes="Bold"/>
-                        <Label Text="{Binding Name}" TextColor="Black" FontAttributes="Bold"/>
-                    </StackLayout>
-                </ViewCell>
-            </DataTemplate>
-            <DataTemplate x:Key="deselectedAppearanceTemplate">
-                <ViewCell>
-                    <StackLayout Orientation="Horizontal" Padding="0" Spacing="20">
-                        <Switch IsToggled="{Binding IsSelected}"/>
-                        <Label Text="√" TextColor="Transparent" FontAttributes="Bold"/>
-                        <Label Text="{Binding Name}" TextColor="Black" FontAttributes="None"/>
-                    </StackLayout>
-                </ViewCell>
-            </DataTemplate>
-            <local:ListViewItemDataTemplateSelector
-                x:Key="listViewItemDataTemplateSelector"
-                SelectedAppearanceTemplate="{StaticResource selectedAppearanceTemplate}"
-                DeselectedAppearanceTemplate="{StaticResource deselectedAppearanceTemplate}"/>
-        </ResourceDictionary>
-    </ContentPage.Resources>
+    Title="{Binding PageTitle}">
     <ContentPage.Content>
         <StackLayout Orientation="Vertical" Padding="10, 10, 10, 10">
             <ListView
                 x:Name="lv_ContentTypes"
-                ItemsSource="{Binding ContentTypes}"
+                ItemsSource="{Binding ContentTypeViewModels}"
                 SelectionMode="None"
                 ItemTapped="lv_ContentTypes_ItemTapped"
-                SeparatorVisibility="None"
-                ItemTemplate="{StaticResource listViewItemDataTemplateSelector}">
+                SeparatorVisibility="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal" Padding="0" Spacing="20">
+                                <Switch IsToggled="{Binding IsSelected}"/>
+                                <Label Text="{Binding Name}" TextColor="Black" FontAttributes="None"/>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
+            <Label Text="Cache Expires In (hours)"/>
+            <StackLayout Orientation="Horizontal">
+                <Entry Text="{Binding ExpirationHours}" HorizontalOptions="StartAndExpand" Keyboard="Numeric" IsEnabled="False" />
+                <Stepper Value="{Binding ExpirationHours}" HorizontalOptions="End"/>
+            </StackLayout>
             <Button x:Name="btn_RequestContent" Clicked="btn_RequestContent_Clicked" Text="Request Initial Content"/>
         </StackLayout>
     </ContentPage.Content>
