--- a/contenfulsyncapi/ResultsTabPage.xaml
+++ b/contenfulsyncapi/ResultsTabPage.xaml
@@ -3,18 +3,13 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:contenfulsyncapi.ViewModel"
-    x:Class="contenfulsyncapi.ResultsListPage"
-    NavigationPage.HasNavigationBar="True"
+    x:Class="contenfulsyncapi.ResultsTabPage"
     Title="{Binding PageTitle}">
     <ContentPage.Resources>
         <ResourceDictionary>
             <DataTemplate x:Key="updatedAppearanceTemplate">
                 <StackLayout Orientation="Vertical" Margin="0, 0, 0, 0" Padding="2">
-                    <StackLayout Orientation="Horizontal">
-                        <Label TextColor="{StaticResource UpdatedTextColor}" LineBreakMode="NoWrap" TextDecorations="Underline" FontAttributes="Bold" Text="{Binding SyncType}"/>
-                        <Label TextColor="{StaticResource UpdatedTextColor}" LineBreakMode="NoWrap" FontAttributes="Bold" Text="{Binding ContentTypeId}"/>
-                        <Label TextColor="{StaticResource UpdatedTextColor}" Text="{Binding Id}"/>
-                    </StackLayout>
+                    <Label TextColor="{StaticResource UpdatedTextColor}" Text="{Binding Id}"/>
                     <Label TextColor="{StaticResource UpdatedTextColor}">
                         <Label.FormattedText>
                             <FormattedString>
@@ -31,11 +26,7 @@
             </DataTemplate>
             <DataTemplate x:Key="notUpdatedAppearanceTemplate">
                 <StackLayout Orientation="Vertical" Margin="0, 0, 0, 0" Padding="2">
-                    <StackLayout Orientation="Horizontal">
-                        <Label TextColor="{StaticResource NormalTextColor}" LineBreakMode="NoWrap" TextDecorations="Underline" FontAttributes="Bold" Text="{Binding SyncType}"/>
-                        <Label TextColor="{StaticResource NormalTextColor}" LineBreakMode="NoWrap" FontAttributes="Bold" Text="{Binding ContentTypeId}"/>
-                        <Label TextColor="{StaticResource NormalTextColor}" Text="{Binding Id}"/>
-                    </StackLayout>
+                    <Label TextColor="{StaticResource NormalTextColor}" Text="{Binding Id}"/>
                     <Label TextColor="{StaticResource NormalTextColor}">
                         <Label.FormattedText>
                             <FormattedString>
@@ -50,23 +41,23 @@
                     <BoxView BackgroundColor="LightSteelBlue" HeightRequest="1"/>
                 </StackLayout>
             </DataTemplate>
-            <local:EntryItemDataTemplateSelector
-                x:Key="entryItemDataTemplateSelector"
+            <local:EntryShellDataTemplateSelector
+                x:Key="entryShellDataTemplateSelector"
                 UpdatedAppearanceTemplate="{StaticResource updatedAppearanceTemplate}"
                 NotUpdatedAppearanceTemplate="{StaticResource notUpdatedAppearanceTemplate}" />
         </ResourceDictionary>
     </ContentPage.Resources>
     <StackLayout Orientation="Vertical">
-        <CollectionView
-            x:Name="cv_Response"
-            ItemsSource="{Binding Entries}"
-            SelectionMode="Single"
-            SelectionChanged="cv_Response_SelectionChanged"
-            ItemTemplate="{StaticResource entryItemDataTemplateSelector}">
-        </CollectionView>
-        <Button x:Name="btn_LoadNextPage" IsEnabled="{Binding IsLoadNextPageButtonEnabled}" Clicked="btn_LoadNextPage_Clicked" Text="Load Next Page"/>
-        <Button x:Name="btn_UpdateResults" IsEnabled="{Binding IsUpdateResultsButtonEnabled}" Clicked="btn_UpdateResults_Clicked" Text="Update Results"/>
-        <Label x:Name="lbl_PreviousUpdated" Text="{Binding PreviousUpdatedText}" TextColor="Blue" />
-        <Label x:Name="lbl_LastUpdated" Text="{Binding LastUpdatedText}" TextColor="Blue" />
+        <RefreshView IsRefreshing="{Binding IsRefreshing, Mode=OneWay}" Command="{Binding RefreshCommand}">
+            <CollectionView
+                x:Name="cv_Results"
+                ItemsSource="{Binding EntryShells}"
+                SelectionMode="None"
+                ItemTemplate="{StaticResource entryShellDataTemplateSelector}"/>
+        </RefreshView>
+        <Label Text="Pull down to refresh" FontSize="Micro" TextColor="Blue" HorizontalOptions="Center"/>
+        <Label Text="{Binding ExpiresText}" FontSize="Micro" TextColor="Blue" HorizontalOptions="Center"/>
+        <Label Text="{Binding PreviousUpdatedText}" FontSize="Micro" TextColor="Blue" HorizontalOptions="Center" />
+        <Label Text="{Binding LastUpdatedText}" FontSize="Micro" TextColor="Blue" HorizontalOptions="Center" />
      </StackLayout>
 </ContentPage>
